# MESS

./: DATASETS.md  GettingStarted.md  LICENSE  README.md  eval.sh  pyproject.toml  requirements.txt  setup_env.sh
in_domain/: README.md  in_domain_evaluation.py  prepare_in_domain_datasets.py
in_domain/datasets/: __init__.py  register_ade20k_full.py  register_pascal_context.py  register_pascal_voc.py
in_domain/prepare_datasets/: prepare_ade20k_sem_seg.py  prepare_pascal_context_459.py  prepare_pascal_voc.py
mess/: DATASETS.md  README.md  datasets.bib  prepare_all_datasets.py  setup_env.sh
mess/datasets/: MMSegDataset.py  TorchvisionDataset.py  __init__.py  register_TEMPLATE.py  register_atlantis.py  register_bdd100k.py  register_chase_db1.py  register_corrosion_cs.py  register_cryonuseg.py  register_cub_200.py  register_cwfid.py  register_dark_zurich.py  register_deepcrack.py  register_dram.py  register_floodnet.py  register_foodseg.py  register_isaid.py  register_isprs_potsdam.py  register_kvasir_instrument.py  register_mhp_v1.py  register_paxray.py  register_pst900.py  register_suim.py  register_uavid.py  register_worldfloods.py  register_zerowaste.py
mess/evaluation/: mess_evaluation.py  sem_seg_evaluation.py
mess/in_domain/: README.md  eval.sh  prepare_in_domain_datasets.py
mess/prepare_datasets/: prepare_TEMPLATE.py  prepare_all_datasets.py  prepare_atlantis.py  prepare_bdd100k.py  prepare_chase_db1.py  prepare_corrosion_cs.py  prepare_cryonuseg.py  prepare_cub_200.py  prepare_cwfid.py  prepare_dark_zurich.py  prepare_deepcrack.py  prepare_dram.py  (+12 more)
(+8 files in other folders)
