[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "mess-benchmark"
version = "0.2"

authors = [
  { name="Benedikt Blumenstiel", email="benedikt.blumenstiel@live.com"},
]
description = "MESS – Multi-domain Evaluation of Semantic Segmentation"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
keywords = ["mess", "benchmark", "zero-shot", "evaluation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'torch>=1.10.1',
    'torchvision>=0.11.2',
    'pandas>=1.5.1',
    'numpy>=1.22.4',
    'rasterio>=1.3.4',
    'gdown>=4.6.4',
    'opencv-python-headless>=4.7.0.72',
    'iopath>=0.1.7',
    'Pillow>=7.1',
    'tqdm>=4.64.1',
    'matplotlib>=3.6.2',
]

[project.optional-dependencies]
all = [
    'scipy',
    'pycocotools',
]

[project.urls]
"Homepage" = "https://blumenstiel.github.io/mess-benchmark/"
"Bug Tracker" = "https://github.com/blumenstiel/MESS/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["mess", "mess.*"]
